--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "deploy-gh": "ng deploy --cname=misojo.darideveloper.com",
     "dev:ssr": "ng run Misojo:serve-ssr",
     "serve:ssr": "node dist/Misojo/server/main.js",
     "build:ssr": "ng build && ng run Misojo:server",
